add board list view

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,15 +5,15 @@ services:
     restart: always
     build:
       context: .
-      dockerfile: Dockerfile-web
+      # dockerfile: Dockerfile-web
     networks:
       - default
-      - my_net
+      - p1_net
     ports:
       - "5050:5050"
     container_name: web
 
 
 networks:
-  my_net:
+  p1_net:
     driver: bridge
