--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-aniso8601==9.0.1
-click==8.0.1
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.0.3
 colorama==0.4.4
-Flask==2.0.1
-Flask-RESTful==0.3.9
+Flask==2.0.2
+idna==3.3
 itsdangerous==2.0.1
-Jinja2==3.0.1
+Jinja2==3.0.3
 MarkupSafe==2.0.1
-pytz==2021.1
-six==1.16.0
-Werkzeug==2.0.1
+PyMySQL==1.0.2
+requests==2.27.1
+urllib3==1.26.9
+Werkzeug==2.0.2
